saving deliverables and gets
